add other gc configs